# strings-ops

./: CMakeLists.txt
include/: strings.hpp
src/: naive_strings.cpp  scasb_strings.cpp  sse4-2_strings.cpp  standard_strings.cpp  unrolled_strings.cpp
test/: benchmark.cpp  unittest.cpp
